Build to /docs and modify theme

--- a/docs/global.css
+++ b/docs/global.css
@@ -14,7 +14,7 @@ body {
     margin: 0;
     padding: 3vw;
     color: #f6f0f0;
-    background: #2f2f2f;
+    background: #161e2e;
     font-family: -apple-system, BlinkMacSystemFont, Poppins;
     box-sizing: border-box;
     filter: drop-shadow(0 0 10px #0000009c);
